[package]
edition = "2024"
name = "bilive-code"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
clap = {version = "4.5.38", features = ["derive"]}
reqwest = {version = "0.12.15", features = ["cookies", "json"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = {version = "1.45.0", features = ["full"]}
tokio-stream = {version = "0.1.17", features = ["full"]}
toml = "0.8.22"
